--- a/XamarinSA.Locator/XamarinSA.Locator.csproj
+++ b/XamarinSA.Locator/XamarinSA.Locator.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ViewModels\AmbassadorDetailsVM.cs" />
     <Compile Include="Views\StyledNavigationPage.cs" />
     <Compile Include="Misc\ColorStyles.cs" />
+    <Compile Include="Views\TappableLabel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.4.6332\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.4.6332\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
