Another temp commit

--- a/XamarinSA.Locator/XamarinSA.Locator.iOS/Info.plist
+++ b/XamarinSA.Locator/XamarinSA.Locator.iOS/Info.plist
@@ -46,5 +46,18 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleShortVersionString</key>
 	<string></string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>MKDirectionsRequest</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.apple.maps.directionsrequest</string>
+			</array>
+		</dict>
+	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We would like to find the Ambassadors closest to you.</string>
 </dict>
 </plist>
